fixed few bugs on getting user groups for shared service roles, method renamed, join updates, validator updates
